log/build_2021-09-13_00-07-02/JNode_MotorController/stderr.log
  File "/home/spacecal/SpaceCal/install/JNode_MotorController/lib/python3.8/site-packages/JNode_MotorController/motorController.py", line 12
    import std_msgs.msg import String
                        ^
SyntaxError: invalid syntax

